compose-box: Fix sagging text on external monitors.
Having an emoji in the topic name pushes down the text
in the compose box topic field. This happens specifically
for low-resolution external monitors on Safari and Chrome.
The emoji is being rendered larger on the low-resolution
monitor to retain the detail by the browser. This makes
the emoji too large to fit within the box during the
current styling. Adding line-height with an em value and
switching the top and bottom padding to an em value fixes
this issue.

Fixes #31153.

--- a/web/styles/compose.css
+++ b/web/styles/compose.css
@@ -931,9 +931,17 @@ textarea.new_message_textarea {
         box-shadow: none;
         outline: none;
 
-        padding: 4px 6px;
+        /* Top and bottom padding needs to be a dynamic value to
+           fit emojis in both compact (14px) and regular mode (16px)
+           on all monitors. 0.15em is 2.4px at 16px/1em and
+           0.15em is 2.1px at 14px/1em. */
+        padding: 0.15em 6px;
         /* Reset height to let `align-items: stretch` on the grid parent handle this. */
         height: auto;
+        /* Line-height needed to stop text from sagging on low-resolution
+           monitors on Safari and Chrome. 1.6em is 25.6px at 16px.
+           1.6em is 22.4px at 14px. */
+        line-height: 1.6em;
     }
 
     /* Styles for new conversation button in the recipient_box */
